release script: pass MAVEN_OPTS